# name-scrapper-crowdstrike

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  downloader.py  html_generator.py  http_client.py  main.py  scraper.py
app/models/: animal.py
tests/: test_downloader.py  test_html_generator.py  test_scraper.py
